modified the changes again to the file build.xml

--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,7 @@
    </target>
    
    <target name="info" depends="create a folder">
-      <echo>Hello World - Welcome to Apache Ant!</echo>
+      <echo>Hello World - Welcome to Apache Ant!by vasu dev palle</echo>
    </target>
    
 </project>
